--- a/DemExamApp/App.xaml
+++ b/DemExamApp/App.xaml
@@ -2,8 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:DemExamApp"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Windows\MainWindow.xaml">
+    
     <Application.Resources>
-         
+        <SolidColorBrush x:Key="PrimaryColor" Color="White"/>
+        <SolidColorBrush x:Key="SecondaryColor" Color="#ABCFCE"/>
+        <SolidColorBrush x:Key="AccentColor" Color="#546F94"/>
     </Application.Resources>
+    
 </Application>
